<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="oob.myform.SecondActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayoutRadioGroup">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="140dp"
            android:layout_marginEnd="140dp"/>

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/radioGroupSelectTypeGreeting"
            >

            <RadioButton
                android:id="@+id/radioButtonGreeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/greeting" />

            <RadioButton
                android:id="@+id/radioButtonFarewell"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/farewell" />

        </RadioGroup>
    </LinearLayout>

    <SeekBar
        android:id="@+id/seekBarAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="@integer/maximumAge"
        android:layout_below="@+id/linearLayoutRadioGroup"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayoutYourAge"
        android:layout_below="@+id/seekBarAge"
        >

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="140dp"
            android:layout_marginEnd="100dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageHint"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ageHintEmpty"
            android:id="@+id/ageSelected"
            />

    </LinearLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnNext"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:background="@color/colorAccent"
        android:textColor="@color/colorDivider"
        />
</RelativeLayout>
